syntax="proto3";
message TaskProgress {
    int32 main_task_id = 1; // 当前主线任务 id
}

message BasicInfo {
    int32 player_id = 1;
    bool is_returning_visitor = 2;
}
message RoleInfo {
    BasicInfo basic_info = 1;
    TaskProgress progress = 2;
}
